// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly: default 1`] = `
<Fragment>
  <LazyComponentWrapper />
  <Outlet />
  <KeyboardShortcutsModal />
</Fragment>
`;

exports[`should render correctly: with gravatar 1`] = `
<Fragment>
  <LazyComponentWrapper>
    <link
      href="http://example.com"
      rel="preconnect"
    />
  </LazyComponentWrapper>
  <Outlet />
  <KeyboardShortcutsModal />
</Fragment>
`;
